# platform.upstream.iptables

./: Makefile.in  configure  iptables-1.4.14.tar.bz2.delta  iptables-1.4.14.tar.bz2.id  iptables-1.4.19.1.tar.bz2.delta  iptables-1.4.19.1.tar.bz2.id  iptables-1.4.21.tar.bz2.delta  iptables-1.4.21.tar.bz2.id  project.config
extensions/: libxt_cgroup.c  libxt_hashlimit.c  libxt_limit.c
iptables/: Makefile.am  Makefile.in  iptables-apply
packaging/: iptables-apply-mktemp-fix.patch  iptables-batch.patch  iptables.changes  iptables.spec
utils/: Makefile.in
